# kjql

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  jreleaser.yml  release.toml  rustfmt.toml
.github/workflows/: release.yml
benches/: benchmark.rs
crates/kjql/: Cargo.toml
crates/kjql-parser/: Cargo.toml  README.md
crates/kjql-parser/src/: combinators.rs  errors.rs  group.rs  lib.rs  parser.rs  tokens.rs
crates/kjql-parser/tests/: integration.rs
crates/kjql-runner/: Cargo.toml
crates/kjql-runner/benches/: benchmark.rs
crates/kjql-runner/src/: array.rs  errors.rs  lib.rs  object.rs  runner.rs
crates/kjql-runner/tests/: integration.rs
crates/kjql/src/: args.rs  main.rs  panic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
src/: apply_filter.rs  array_walker.rs  bin.rs  core.rs  flatten_array.rs  flatten_json_array.rs  flatten_json_object.rs  get_selection.rs  get_selector.rs  grammar.pest  group_walker.rs  lib.rs  main.rs  panic.rs  parser.rs  range_selector.rs  tests.rs  truncate.rs  types.rs  utils.rs
test/: b.json  integration.rs
test/data/: a.json
