[package]
name = "kjql"
version = "1.0.0"
edition = "2021"
authors = ["klion26 <klion26@apache.org>"]
exclude = ["rustfmt.toml", "benchs/**/*"]
[dev-dependencies]
criterion = "0.5.1"

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.13.0", features = ["attributes", "unstable"] }
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
pest = "2.7.15"
pest_derive = "2.1.0"
regex = "1.5.4"
rayon = "1.5.1"
serde_json = { version = "1.0.134", default-features = false, features = ["preserve_order"] }
colored_json = { version = "5.0.0", optional = true }
toml = "0.8.19"

[features]
default = ["clap", "colored_json"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[lib]
name = "kjql"
path = "src/lib.rs"

[[bin]]
name = "kjql"
path = "src/bin.rs"
required-features = ["clap", "colored_json"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"