[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
thiserror = "2.0.9"
serde_json = { version = "1.0.134", features = ["preserve_order", "unbounded_depth"] }

[workspace.package]
authors = ["klion26 <klion26@apache.og>"]
categories = ["command-line-utilities", "json"]
edition = "2021"
keywords = ["cli", "json", "tool"]
readme = "README.md"
repository = "https://github.com/klion26/kjql"
version = "2.0.0"
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"