[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Parser for kjql - the JSON Query Language tool."

edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "kjql-parser"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
nom = "7.1.3"
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"