[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Parser for kjql - the JSON Query Language tool."

edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "kjql-parser"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
thiserror = { workspace = true }
winnow = "0.6.22"

[lib]
path = "src/lib.rs"