[package]
authors = { workspace = true }
categories = { workspace = true }
description = "kjql -- the JSON Query Language - is a fast and simple command-line tool to manipulate JSON data"

edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "kjql"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
colored_json = { version = "5.0.0" }
kjql-runner = { path = "../kjql-runner" }
serde = "1.0.217"
serde_stacker = "0.1.11"
serde_json.workspace = true
audit.workspace = true
tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
